# cabaliser

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py
benchmark_data/: benchmark_figures.ipynb  benchmark_qubits.sh
c/: .gitignore  Makefile  README.md
c/constructive_proofs/: clifford_table.py  tableau_cliffords.py
c/lib/: aligned_chunk.h  array_list.h  consts.h  correction_tracker.h  debug.h  input_stream.h  instruction_table.h  instructions.h  linked_list.h  qubit_map.h  simd_transpose.h  tableau.h  tableau_operations.h  tableau_operations_par.h  threadpool.h  widget.h
c/pandora-api/: Makefile
c/pandora_api/: Makefile
c/python_api/: cjab.py  gates.py  operation_sequence.py  qubit_array.py  test_toffoli.py
c/src/: aligned_chunk.c  array_list.c  correction_tracker.c  input_stream.c  input_stream_par.c  instructions.c  linked_list.c  (+7 more)
c_lib/: .gitignore  Makefile  clangMake
docs/: cabaliser-py.md
examples/: conditional_measurement_example.py  disjoint_toffolis_example.py  feed_forward_example.py  ghz_example.py  local_toffoli_example.py  qft_example.py  simulator_example.py  tag_example.py  toffoli_example.py  two_qubit_example.py  widget_sequence_example.py  widget_sequence_floats_example.py
src/: aligned_chunk.rs  main.rs  tableau.rs
tests/: local_simulator.py  test_casting.py  test_cliffords.py  test_conditional_operations.py  test_operations.py  test_operations_json.py  test_pandora.py  test_pauli_tracker.py  test_toffoli.py  test_widget.py  test_widget_from_json.py  test_widget_sequencing.py
(+151 files in other folders)
