[metadata]
name = cabaliser 
description = "Graph State Compiler"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/quollnest/rottnest_py


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = ~=3.8

install_requires =
    numpy
    
[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest~=6.2
